# gnome-mplayer

./: .gitattributes  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  apps.gecko-mediaplayer.preferences.gschema.xml  apps.gnome-mplayer.preferences.gschema.xml  config.h  config.h.in  configure  configure.in  gnome-mplayer.1  gnome-mplayer.desktop  gnome-mplayer.schemas  gnome-mplayer.schemas.in  gnome-mplayer.spec.in
DOCS/: keyboard_shortcuts.txt
DOCS/tech/: dbus.txt
debian/: changelog  control  docs  files  gnome-mplayer.manpages  menu  rules  watch
icons/: Makefile.in
icons/16x16/: Makefile.am  Makefile.in
icons/22x22/: Makefile.am  Makefile.in
icons/24x24/: Makefile.am  Makefile.in
icons/32x32/: Makefile.in
icons/48x48/: Makefile.in
icons/scalable/: Makefile.am  Makefile.in
pixmaps/: gnome_mplayer.xpm  media-skip-backward.xpm
po/: Makefile.in.in  POTFILES.in  ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en.gmo  en.po  en_GB.po  es.gmo  es.po  et.po  eu.po  fi.po  fo.po  fr.po  fy.po  gl.po  gnome-mplayer.pot  he.po  hr.po  hu.po  id.po  it.po  ja.po  kk.po  ko.po  lt.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  si.po  sr.po  sr@latin.po  (+9 more)
src/: Makefile.am  Makefile.in  caja_property_page.c  common.h  database.c  database.h  dbus-interface.c  dbus-interface.h  gui.c  gui.h  langlist.h  main.c  mime_types.h  mntent_compat.c  mntent_compat.h  mpris-interface.c  mpris-interface.h  nautilus_property_page.c  nemo_property_page.c  playlist.c  playlist.h  property_page_common.c  property_page_common.h  support.c  support.h  thread.c  thread.h
src/libgmlib/: Makefile.am  Makefile.in  gm_audio.c  gm_audio.h  gm_file.c  gm_file.h  gm_parse.c  gm_parse.h  gm_pref_store.c  gm_pref_store.h  gm_strfuncs.c  gm_strfuncs.h  gmlib.h
src/libgmtk/: Makefile.am  Makefile.in  gmtk.h  gmtk_audio_meter.c  gmtk_audio_meter.h  gmtk_media_player.c  gmtk_media_player.h  gmtk_media_tracker.c  gmtk_media_tracker.h  gmtk_output_combo_box.c  gmtk_output_combo_box.h
trunk/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure.in  gnome-mplayer.desktop  gnome-mplayer.schemas  gnome-mplayer.spec.in
trunk/DOCS/tech/: dbus.txt
trunk/debian/: Makefile.am  Makefile.in  copyright  gnome-mplayer.1  gnome-mplayer.substvars
trunk/icons/16x16/: Makefile.in
trunk/icons/24x24/: Makefile.in
trunk/icons/32x32/: Makefile.am  Makefile.in
trunk/icons/48x48/: Makefile.am  Makefile.in
trunk/icons/scalable/: Makefile.in
trunk/pixmaps/: gnome_mplayer.xpm  media-playback-pause.xpm  media-playback-start.xpm  media-playback-stop.xpm  media-seek-backward.xpm  media-seek-forward.xpm  media-skip-forward.xpm  view-fullscreen.xpm
trunk/po/: Makefile.in.in  ar.po  en_GB.po  es.po  et.po  eu.po  fr.po  fy.po  gnome-mplayer.pot  it.po  ja.po  kk.po  ko.po  lt.po  pl.po  pt.po  pt_BR.po  sr.po  sr@latin.po  sv.po  ug.po  vi.po  zh_CN.po  zh_HK.po  zh_TW.po
trunk/src/: Makefile.am  Makefile.in  database.c  database.h  dbus-interface.h  gui.c  langlist.h  main.c  mntent_compat.h  mpris-interface.c  mpris-interface.h  playlist.c  playlist.h  support.h  thread.c  thread.h
